# kyc-api

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
KYC-Frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
KYC-Frontend/design-reference/: .thumbnail  Agent.dc.html  App.dc.html  MFI-Manager.dc.html
KYC-Frontend/src/: index.html  styles.scss
KYC-Frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  29bb19e2cc18_add_occupation_to_extracted_data.py  8beaaa5a9d0c_initial_schema.py  a1c4e7b20d93_add_login_throttle_fields.py  a3f8c1e64b52_add_signup_invites.py  b1c2d3e4f5a6_add_verification_images.py  b2d5f8c31e07_encrypt_extracted_pii.py  b7d2f4a9c810_add_pin_resets.py  c2d3e4f5a6b7_add_review_fields.py  c2e5a7b91d34_add_agent_phone.py  d3e4f5a6b7c8_admin_nullable_mfi.py  d9a1c3f57e42_rename_hashed_password_to_hashed_pin.py  e08620485bc8_add_status_breakdown_to_compliance_.py  e1b6a2d34c78_rename_agents_to_users.py  e4f5a6b7c8d9_add_totp_two_factor.py  f4a1c9d2b3e7_add_agent_auth_fields.py  f5c8d1a92e60_add_branches.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  deps.py  router.py
app/api/v1/routes/: account.py  (+12 more)
app/core/: __init__.py  config.py  crypto.py  exceptions.py  logging.py  security.py  validation.py
app/db/: __init__.py  base.py  session.py  types.py
app/models/: __init__.py  compliance.py  enums.py  mfi.py  onboarding.py  verification.py
app/pipeline/: __init__.py  contracts.py  decision.py  face_detect.py  orchestrator.py
app/pipeline/stages/: __init__.py  duplicate.py  face_match.py  liveness.py  ocr.py  preprocess.py
app/schemas/: __init__.py  account.py  admin.py  agent.py  api_key.py  auth.py  branch.py  monitoring.py  onboarding.py  report.py  review.py  stats.py  verification.py
app/services/: admin.py  audit.py  duplicate_store.py  email.py  images.py  monitoring.py  report_pdf.py  reporting.py  stats.py  subscription.py
data/antispoof/: README.md
docker/: Caddyfile  Dockerfile  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
docs/: DASHBOARD-BACKEND.md  DEPLOYMENT.md  Implementation_Plan.md  KYC_API_Cahier_Analyse.docx  KYC_API_Cahier_Conception.docx  ML-PIPELINE.md
docs/ml-pipeline-assets/: liveness_metrics.json
ml/: prepare_lcc_fasd.py  train_antispoof.py
scripts/: __init__.py  create_api_key.py  ocr_debug.py  provision_vps.sh  seed_admin.py  seed_manager.py  seed_plans.py  send_test_email.py  verify_smoke.py  warm_models.py
tests/: __init__.py  conftest.py  factories.py
tests/integration/: test_account.py  test_admin.py  test_agents.py  test_api_keys.py  test_auth.py  test_branches.py  test_duplicate_store.py  test_monitoring.py  test_onboarding.py  test_reports.py  test_reviews.py  test_verifications.py  test_verify.py
tests/unit/: test_config.py  test_crypto.py  test_decision.py  test_duplicate.py  test_email.py  test_face_detect.py  test_face_match.py  test_health.py  test_liveness.py  test_models.py  test_monitoring.py  test_ocr.py  test_orchestrator.py  test_preprocess.py  test_report_pdf.py  test_security.py  test_seed_plans.py  test_session.py  test_subscription.py  test_train_antispoof.py  test_verify_input.py
(+52 files in other folders)
